syntax = "proto3";

package common.v1;

option go_package = "github.com/Daniil-Sakharov/RocketFactory/shared/pkg/proto/common/v1;common_v1";

// User - Общая структура пользователя
message User {
  // UUID пользователя
  string user_uuid = 1;
  // Логин пользователя
  string login = 2;
  // Email пользователя
  string email = 3;
}

// NotificationMethod - Способ отправки уведомлений пользователю
// Используется в Register и GetUser
message NotificationMethod {
  // Название провайдера (telegram, email, sms)
  string provider_name = 1;
  // Целевой адрес (telegram chat_id, email адрес, номер телефона)
  string target = 2;
}